[package]
name = "vyridium_hash"
version = "0.3.0"
edition = "2021"
authors = ["2 cool guys"]
repository = "https://github.com/Epsiloong/vyridium-hash"
license = "MIT"
description = "vyridium_hash in rust"
readme = "README.md"
keywords = ["hash", "algorithm", "library"]
categories = ["algorithms", "cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Common dependencies
thiserror = "1.0.58"
aes = { version = "0.8.3", features = ["hazmat"] }
bytemuck = { version = "1.15.0", features = ["derive"] }
chacha20 = { version = "0.9.1" }
fnv = "1.0.7"
rc4 = "0.1.0"
sha2 = "0.10.8"
blake3 = { version = "1.5.1" }
siphasher = "1.0.1"
suffix_array = "0.5.0"
xxhash-rust = { version = "0.8.11", features = ["xxh64", "xxh3"] }


[dev-dependencies]
rand = "0.8.5"

[features]
default = ["v1"]
v1 = []


